# silva

./: .travis.yml  README.md  installdependency.sh  installdependencyXavier.sh
core/: CMakeLists.txt  package.xml
core/launch/: beta.launch
core/msg/: Evans.msg
core/params/: dynamic_params.yaml  gui_config.yaml  ibuki.map  ibuki.yaml  limit.map
core/src/: actuator.py  mixer.py  utils.py
ibukiDEVGuide/: README.md  planner.py
ibuki_control/: CMakeLists.txt  package.xml
ibuki_control/config/: ibuki_control.yaml
ibuki_control/launch/: ibuki_control.launch
ibuki_description/: CMakeLists.txt  package.xml
ibuki_description/meshes/: arml_pitch_flat.stl  arml_roll_flat.stl  arml_yaw_flat.stl  armr_pitch.stl  armr_pitch_flat.stl  armr_roll.stl  armr_roll_flat.stl  armr_yaw.stl  armr_yaw_flat.stl  hand.stl  head.stl  hip_p.stl  hip_r.stl  hip_y.stl  shoulderl_pitch_flat.stl  shoulderr_pitch.stl  shoulderr_pitch_flat.stl  upper_body.stl  wristl_yaw_flat.stl  wristr_yaw.stl  wristr_yaw_flat.stl
ibuki_description/urdf/: ibuki.urdf
ibuki_extra/: CMakeLists.txt  README.md  package.xml
ibuki_extra/launch/: face_tracking.launch  idle.launch
ibuki_extra/params/: mask_rsigmoid.yaml  momentary_motion.yaml
ibuki_extra/src/: arml.py  armr.py  artificial_potential_method.py  autoframe.py  blink.py  cam_human_detection.py  face_recognition.py  face_tracking.py  hand.py  headc.py  headl.py  headr.py  hip.py  human_detection_by_lrf.py  imu_hip.py  joystick.py  main.py  motion_carlos.py  neck.py  recsound.py  tanh.py  tobie2ibk.py  transformations.py  v2_lrf_auto_controller.py
ibuki_gazebo/: CMakeLists.txt  package.xml  setup.py
ibuki_gazebo/launch/: ibuki_gazebo.launch  ibuki_silva.launch
ibuki_gazebo/scripts/: driver_interface.py  tester.py  walker.py
korg_nanokontrol/: CMakeLists.txt  README.md  package.xml  setup.py
korg_nanokontrol/config/: nanokontrol2_config.yaml  nanokontrol_config.yaml  nanokontrolakai_config.yaml
korg_nanokontrol/launch/: akai_professional.launch
korg_nanokontrol/nodes/: kontrol.py
korg_nanokontrol/src/korg_nanokontrol/: korg.py
rplidar_ros/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rplidar_ros/launch/: amcl_movebase.launch
rplidar_ros/map/: atr-2f.pgm  atr-2f.yaml
rt_usb_9axisimu_driver/: CMakeLists.txt
scripts/: preinstall.sh
silva/: CHANGELOG.rst  CMakeLists.txt  package.xml
silva_beta/: CMakeLists.txt  README.md  package.xml
silva_beta/doc/: data_format.csv  (+2 more)
silva_core/: CMakeLists.txt  package.xml  setup.py
usb_cam/: CMakeLists.txt  README.md
(+126 files in other folders)
