<package format="2">
  <name>silva</name>
  <version>1.0.1</version>
  <description>
  The silva android operation system controls android motion by using a developed framework by merging multiple motion generator models.
  </description>

  <maintainer email="yu.shiqi@irl.sys.es.osaka-u.ac.jp">Shiqi Yu</maintainer>

  <license>GPL</license>

  <author>Shiqi Yu</author>
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>silva_beta</exec_depend>
  <exec_depend>ibuki_extra</exec_depend>
  <exec_depend>korg_nanokontrol</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rt_usb_9axisimu_driver</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>respeaker_ros</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
